Added copyright notices to all APEX classes and Visualforce Pages

--- a/force-app/main/default/classes/USTEventRegisterController.cls
+++ b/force-app/main/default/classes/USTEventRegisterController.cls
@@ -441,6 +441,10 @@ public with sharing class USTEventRegisterController {
 
         List<Schema.PicklistEntry> PicklistValues = Schema.getGlobalDescribe().get(namespace + YourObjectName).getDescribe().fields.getMap().get(namespace + YourFieldName).getDescribe().getPicklistValues();
 
+        if(includeSelect) {
+            picklists.add(new SelectOption('','Select...'));
+        }
+
         for (Schema.PicklistEntry PicklistValue : PicklistValues) {
             picklists.add(new SelectOption(PicklistValue.getValue(), PicklistValue.getLabel()));
         }
