Added without sharing inner class to deal with non-read access for upcoming Guest User sharing rules

--- a/force-app/main/default/classes/USTEventRegistrationOptionsController.cls
+++ b/force-app/main/default/classes/USTEventRegistrationOptionsController.cls
@@ -263,7 +263,8 @@ public with sharing class USTEventRegistrationOptionsController {
                 addAppt.Description__c = appt.Description__c;
                 addAppt.Registrant_Input__c = appt.Registrant_Input__c;
                 addAppt.Do_Not_Show_Time__c = appt.Do_Not_Show_Time__c;
-                upsert addAppt;
+                appointmentsCRUD apptCRUD = new appointmentsCRUD();
+                addAppt = apptCRUD.updateAppointments(addAppt);
                 addedAppts = true;
             }
 
@@ -282,11 +283,9 @@ public with sharing class USTEventRegistrationOptionsController {
                 WHERE Event_Registration__c = :evtinfo.evtRegId
                 AND Client_Created_Appointment__c = true
         ];
-        try {
-            delete deleteAppt;
-        } catch (DmlException e) {
-            System.Debug('HERE IS THE DROID YOU ARE LOOKING FOR ======>' + e.getMessage());
-        }
+        appointmentsCRUD apptCrud = new appointmentsCRUD();
+        apptCrud.deleteAppointments(deleteAppt);
+
         List<incomingAppt> deserializedInvoices = (List<incomingAppt>) JSON.deserialize(incomingApptJSon, List<incomingAppt>.class);
         PageReference submitPage = Page.USTEventSubmit;
         for (incomingAppt appt : deserializedInvoices) {
@@ -326,8 +325,8 @@ public with sharing class USTEventRegistrationOptionsController {
             }
             addAppt.Description__c = appt.appDesc;
             addAppt.Registrant_Input__c = appt.appInput;
-
-            upsert addAppt;
+            
+            addAppt = apptCRUD.updateAppointments(addAppt);
         }
         return submitPage;
     }
@@ -337,5 +336,28 @@ public with sharing class USTEventRegistrationOptionsController {
         PageReference registerPage = Page.USTEventRegister;
 
         return registerPage;
+    }
+
+    private without sharing class appointmentsCRUD {
+
+        public UST_Event_Appointments__c updateAppointments(UST_Event_Appointments__c appts) {
+            try {
+                upsert appts;
+            } catch (Exception ex) {
+                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
+                ApexPages.addMessage(myMsg);
+            }
+            return appts;
+        }
+
+        public void deleteAppointments(List<UST_Event_Appointments__c> appts) {
+            try {
+                delete appts;
+            } catch (Exception ex) {
+                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
+                ApexPages.addMessage(myMsg);
+            }
+        }
+
     }
 }
