Added without sharing inner class to deal with non-read access for upcoming Guest User sharing rules on Confirmation controller

--- a/force-app/main/default/classes/USTEventConfirmationController.cls
+++ b/force-app/main/default/classes/USTEventConfirmationController.cls
@@ -86,7 +86,10 @@ public with sharing class USTEventConfirmationController {
                 eventTitle = evtReg.Event_Name__c;
             }
             evtReg.Status__c = 'Requested';
-            upsert evtReg;
+
+            registrationCRUD regCRUD = new registrationCRUD();
+            evtReg = regCRUD.updateRegistration(evtReg);
+
             //Remove the registration ID from the cookie so back button will redirect to the correct page.
             USTShared.createEncryptedCookie('{"audience":"' + evtInfo.audience + '","instanceID":"' + evtInfo.instanceID + '","evtRegId":"","evtId":"' + evtInfo.evtId + '"}', 'USTEvent');
             //create touchpoint
@@ -149,5 +152,19 @@ public with sharing class USTEventConfirmationController {
         }
 
         insert tp;*/
+    }
+
+    private without sharing class registrationCRUD {
+
+        public UST_Event_Registration__c updateRegistration(UST_Event_Registration__c newEvtReg) {
+            try {
+                upsert newEvtReg;
+            } catch (Exception ex) {
+                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
+                ApexPages.addMessage(myMsg);
+            }
+            return newEvtReg;
+        }
+
     }
 }
